# voice-webui

./: .gitignore  flake.nix
backend/: config.py  main.py  pyproject.toml  storage.py
backend/data/: assistant.db
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.svelte
frontend/src/lib/: Dashboard.svelte  MqttLogger.svelte  S3Browser.svelte  SemanticCache.svelte  SpeakerEnroll.svelte  ToolDefinitions.svelte  ToolsManager.svelte
